src/objects/Project_Task__c.object
<CustomObject>
    <description>RWN Project</description>
    <fields>
        <fullName>Actual_Due_Date__c</fullName>
        <formula>IF(ISBLANK( Revised_Due_Date__c ), Due_Date__c , Revised_Due_Date__c )</formula>
        <label>Actual Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <label>% Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>IF( Complete__c =1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Incomplete__c</fullName>
        <formula>IF(Complete__c =1,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incomplete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <formula>IMAGE(&quot;https://c.$Setup.SystemSettings__c.iServeProdInstance__c.content.force.com/servlet/servlet.ImageServer?id=015U00000002LpJ&amp;oid=00DJ0000002lsfT&amp;lastMod=1334720899000&quot;, &quot;P&quot;, 10, Complete__c *100 ) 
&amp; 
IMAGE(&quot;https://c.$Setup.SystemSettings__c.iServeProdInstance__c.content.force.com/servlet/servlet.ImageServer?id=015U00000002LpI&amp;oid=00DJ0000002lsfT&amp;lastMod=1334721035000&quot;, &quot;P&quot;, 10, 100-(Complete__c *100)) 
&amp; 
&quot; &quot; 
&amp; 
TEXT( Complete__c *100) 
&amp; 
&quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Project_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <label>Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revised_Due_Date__c</fullName>
        <label>Revised Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( Complete__c =1, &quot;Completed&quot;, IF( Actual_Due_Date__c &lt; TODAY(),&quot;OVERDUE&quot;,&quot;Incomplete&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Activities_Completed__c</fullName>
        <label>Total Activities Completed</label>
        <summaryFilterItems>
            <field>Project_Task_Activity__c.Complete__c</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Task_Activity__c.Project_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Activities__c</fullName>
        <label>Total Activities</label>
        <summaryForeignKey>Project_Task_Activity__c.Project_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Progress__c</columns>
        <columns>Total_Activities__c</columns>
        <columns>Total_Activities_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>